--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -5,17 +5,54 @@
     "days-before": {
         "today": "Aujourd'hui",
         "tomorrow": "Demain",
-        "in-days": "Dans {} jour",
-        "in-weeks": "Dans {} semaine",
-        "in-months": "Dans {} mois",
-        "in-years": "Dans {} an"
+        "in-days": {
+            "zero": "Aujourd'hui",
+            "one": "Demain",
+            "other": "Dans {} jours"
+        },
+        "in-weeks": {
+            "zero": "Cette semaine",
+            "one": "Dans une semaine",
+            "other": "Dans {} semaines"
+        },
+        "in-months": {
+            "zero": "Ce mois-ci",
+            "one": "Dans un mois",
+            "other": "Dans {} mois"
+        },
+        "in-years": {
+            "zero": "Cette année",
+            "one": "Dans un an",
+            "other": "Dans {} ans"
+        }
     },
     "at-time": "At {}:{}",
-    "attendee": "participant",
+    "attendees": {
+        "zero": "Pas de participants",
+        "one": "{} participant",
+        "other": "{} participants"
+    },
     "events": "Événements",
-    "registered": "inscrit",
     "signup-details": "S'inscrire/Détails",
     "itinerary": "Itinéraire",
     "copy-address": "Copier l'adresse",
-    "address-copied": "Adresse copiée dans le presse-papiers"
+    "address-copied": "Adresse copiée dans le presse-papiers",
+    "x-results": {
+        "zero": "Aucun résultat",
+        "one": "1 resultat",
+        "other": "{} resultats"
+    },
+    "select-date-range": "Sélectionner une plage de dates",
+    "select-games": "Choisir des jeux",
+    "all-filters": "Tous les filtres",
+    "reset-filters": "réinitialiser les filtres",
+    "geographic-parameter": "Paramètre géographique",
+    "distance-device-location": "Distance de votre emplacement",
+    "video-games": "Jeux vidéo",
+    "choose-games": "Choisissez un ou plusieurs jeux",
+    "tournament-dates": "Dates des tournois",
+    "select-dates": "Sélectionner des dates",
+    "number-of-attendees": "Nombre de participants",
+    "minimum": "Minimum",
+    "maximum": "Maximum"
 }
